--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ DB_PASSWORD='zelda'
 DB_HOST='127.0.0.1'
 MODE='dev' 
 ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+
+
+
+DATABASE_URL='postgres://robin:zelda@localhost/awards'
